--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,44 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chat-App</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+  <script>
+    // Check if WebSocket is supported
+    if ("WebSocket" in window) {
+      const socket = io("https://chat-app-4cyr.onrender.com");
+
+      socket.on("connect", () => {
+        console.log("Connected to WebSocket server");
+      });
+
+      socket.on("message", (data) => {
+        const messagesDiv = document.getElementById("messages");
+        messagesDiv.innerHTML += `<p>${data}</p>`;
+      });
+
+      document.getElementById("send").onclick = function () {
+        const messageInput = document.getElementById("message");
+        const message = messageInput.value;
+        socket.emit("new message", message);
+        messageInput.value = ''; // Clear input after sending
+      };
+
+      socket.on("disconnect", () => {
+        console.log("Disconnected from WebSocket server");
+      });
+    } else {
+      alert("WebSocket is not supported by your browser.");
+    }
+  </script>
+</body>
+
 </html>
